# raytracer-thilu

./: .gitmodules  CMakeLists.txt  README.md
docs/: prj0.md  prj2.md  prj3.md
include/: api.hpp  background.hpp  camera.h  camera.hpp  film.hpp  material.h  ortCamera.hpp  param.hpp  parser.hpp  perCamera.hpp  primitive.h  ray.hpp  rt3.hpp  scene.h  sphere.h  util.hpp  vec3.hpp
include/class/: api.cpp  background.cpp  camera.cpp  film.cpp  ortCamera.cpp  param.cpp  parser.cpp  perCamera.cpp  ray.cpp  sphere.cpp  util.cpp
scenes/: scene00.xml  scene01.xml  scene02.xml
src/: main.cpp
